<resources>
    <string name="app_name">LiftCare</string>
    <string name="title_activity_main_menu">mainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="helicopter">Helicopters</string>
    <string name="hospital">Hospitals</string>
    <string name="request">Create a Request</string>
    <string name="hospitalDescription">Hospitals</string>
    <string name="hospitalButton">Create new Hospital</string>
    <string name="hospitalName">Enter the hospital name</string>
    <string name="hospitalLat">Enter the latitude</string>
    <string name="hospitalLong">Enter the longitude</string>
    <string name="check1">Emergent</string>
    <string name="check2">Urgent</string>
    <string name="check3">Scheduled</string>
    <string name="check4">Routine</string>
</resources>
